# procedural-terrain-simulator

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
shaders/: particles.wgsl  sky.wgsl  terrain.wgsl
src/: camera.rs  input.rs  lib.rs  particles.rs  presets.rs  sky.rs  terrain.rs  utils.rs  webgpu.rs
web/: constants.ts  index.html  main.ts  style.css  types.ts  utils.ts
web/public/: site.webmanifest
