[package]
name = "procedural-terrain-simulator"
version = "0.0.1"
edition = "2021"
authors = ["johno"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = "23.0"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = { version = "1.19", features = ["derive"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CssStyleDeclaration",
    "KeyboardEvent",
    "MouseEvent",
    "PointerEvent",
    "WheelEvent",
    "console",
    "Performance",
    "Navigator",
    "Gpu",
] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"

[profile.release]
lto = true
opt-level = "s"

[profile.dev]
opt-level = 1
